// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.AlertBus interface testing UU5.Bricks.AlertBus addAlert() 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID01-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus interface testing UU5.Bricks.AlertBus addAlert() 2`] = `
<Alert
  className="uu5-bricks-alert-bus"
  closeTimer={3000}
  content="Obsah alertu"
  id="uuID01-alert-id_alert_bus"
  key="id_alert_bus"
  mainAttrs={Object {}}
  onClose={[Function]}
/>
`;

exports[`UU5.Bricks.AlertBus interface testing UU5.Bricks.AlertBus addAlert() with header 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID01-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus interface testing UU5.Bricks.AlertBus addAlert() with header 2`] = `
<Alert
  className="uu5-bricks-alert-bus"
  closeTimer={3000}
  colorSchema="yellow"
  content={
    <Strong>
      This is content in Bricks.Alert
    </Strong>
  }
  header={
    <Strong>
      Alert header
    </Strong>
  }
  id="uuID01-alert-ID_OF_ALERT"
  key="ID_OF_ALERT"
  mainAttrs={Object {}}
  onClose={[Function]}
/>
`;

exports[`UU5.Bricks.AlertBus interface testing UU5.Bricks.AlertBus addAlertToPosition() 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID01-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus interface testing UU5.Bricks.AlertBus addAlertToPosition() 2`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID01-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus interface testing UU5.Bricks.AlertBus clearAlert() 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID01-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus interface testing UU5.Bricks.AlertBus clearAlert() 2`] = `
<Alert
  className="uu5-bricks-alert-bus"
  closeTimer={3000}
  content="Obsah alertu"
  id="uuID01-alert-id_alert_bus"
  key="id_alert_bus"
  mainAttrs={Object {}}
  onClose={[Function]}
/>
`;

exports[`UU5.Bricks.AlertBus interface testing UU5.Bricks.AlertBus clearAlert() 3`] = `
<Alert
  className="uu5-bricks-alert-bus"
  closeTimer={3000}
  content="Obsah alertu"
  hidden={true}
  id="uuID01-alert-id_alert_bus"
  key="id_alert_bus"
  mainAttrs={Object {}}
  onClose={[Function]}
/>
`;

exports[`UU5.Bricks.AlertBus interface testing UU5.Bricks.AlertBus getAlerts() 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID01-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus interface testing UU5.Bricks.AlertBus getAlerts() 2`] = `
<Alert
  className="uu5-bricks-alert-bus"
  closeTimer={3000}
  colorSchema="yellow"
  content={
    <Strong>
      This is content in Bricks.Alert
    </Strong>
  }
  id="uuID01-alert-ID_OF_ALERT"
  key="ID_OF_ALERT"
  mainAttrs={Object {}}
  onClose={[Function]}
/>
`;

exports[`UU5.Bricks.AlertBus interface testing UU5.Bricks.AlertBus getAlerts() 3`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID01-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus interface testing UU5.Bricks.AlertBus removeAlert() 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID01-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus interface testing UU5.Bricks.AlertBus removeAlert() 2`] = `
<Alert
  className="uu5-bricks-alert-bus"
  closeTimer={3000}
  colorSchema="yellow"
  content={
    <Strong>
      This is content in Bricks.Alert
    </Strong>
  }
  id="uuID01-alert-ID_OF_ALERT"
  key="ID_OF_ALERT"
  mainAttrs={Object {}}
  onClose={[Function]}
/>
`;

exports[`UU5.Bricks.AlertBus interface testing UU5.Bricks.AlertBus removeAlert() 3`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID01-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus interface testing UU5.Bricks.AlertBus setAlert() 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID01-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus interface testing UU5.Bricks.AlertBus setAlert() 2`] = `
<Alert
  className="uu5-bricks-alert-bus"
  closeTimer={3000}
  colorSchema="yellow"
  content={
    <Strong>
      This is content in Bricks.Alert
    </Strong>
  }
  id="uuID01-alert-ID_OF_ALERT"
  key="ID_OF_ALERT"
  mainAttrs={Object {}}
  onClose={[Function]}
/>
`;

exports[`UU5.Bricks.AlertBus interface testing UU5.Bricks.AlertBus setAlerts() 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID01-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus interface testing UU5.Bricks.AlertBus setAlerts() 2`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID01-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus interface testing UU5.Bricks.AlertBus setAlerts() 3`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID01-inner"
  mainAttrs={Object {}}
/>
`;
